--- a/60002-6.md
+++ b/60002-6.md
@@ -1,20 +1,20 @@
-#LECTURE 6 : Monte Carlos Simulation
-####1. Key Concepts
-> popularity
-> sample
-> variance
-> confidence level & interval
-> law of large numbers <-> gambler's fallacy 
-> regession to the mean
-> PDF(Probability Density Function)
+# LECTURE 6 : Monte Carlos Simulation
+#### 1. Key Concepts
+> popularity  
+> sample  
+> variance  
+> confidence level & interval  
+> law of large numbers <-> gambler's fallacy  
+> regession to the mean  
+> PDF(Probability Density Function)  
 
 
-####2. Additional Reading
-> :https://machinelearningmastery.com/monte-carlo-sampling-for-probability/
-> :https://www.investopedia.com/terms/m/montecarlosimulation.asp
+#### 2. Additional Reading
+> :https://machinelearningmastery.com/monte-carlo-sampling-for-probability/  
+> :https://www.investopedia.com/terms/m/montecarlosimulation.asp  
 
-####3. Useful Functions 
-'''Python
+#### 3. Useful Functions 
+```python
   import numpy as np
   cnt = int(input())
   ar = list(map(int, input().rstrip().split()))
@@ -23,4 +23,4 @@
   print(np.min(ar))
   ##print(format(np.var(ar), ".1f"))
   print(format(np.std(ar), ".1f"))  
-'''
+```
